--- a/_config.yml
+++ b/_config.yml
@@ -113,15 +113,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  name             : "Alan Osorio-Mora"
+  avatar           : "RPTU.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Postdoctoral fellow at RPTU."
+  location         : "Kaiserslautern, Germany"
+  email            : alan.osoriomora@rptu.de
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+       url: "mailto:alan.osoriomora@rptu.de"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
