--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ analytics:
 author:
   name             : "Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "Researcher, and **amateur** musician."
+  location         : "Kaiserslautern, DE"
   email            :
   links:
     - label: "Email"
