--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,16 @@ minimal_mistakes_skin    : "aqua"  # "default" "air", "aqua", "contrast", "dark"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Alan Osorio-Mora"
+title                    : "EURO **young**"
 title_separator          : "-"
-subtitle                 : Personal Blog # site tagline that appears below site title in masthead
-name                     : "Alan Osorio-Mora"
-description              : "Researcher, and amateur musician."
+subtitle                 : EURO YOUNG # site tagline that appears below site title in masthead
+name                     : "EURO YOUNG"
+description              : "This is the site made for showing activities and opportunities for early career researchers in operations research."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/RPTU.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/EURO.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
