--- a/_config.yml
+++ b/_config.yml
@@ -117,17 +117,17 @@ author:
   avatar           : "/assets/images/EURO.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "The place for young researchers."
   location         : "Europe"
-  email            :  euroyoung@euro-online.org
+  email            : # euroyoung@euro-online.org
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto: euroyoung@euro-online.org"
+ #      url: "mailto: euroyoung@euro-online.org"
     - label: "Website"
       icon: "fas fa-fw fa-link"
        #url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-       url: "https://x.com/EUROYoungForum/"
+  #     url: "https://x.com/EUROYoungForum/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -143,7 +143,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/EUROYoungForum/"
+   #   url: "https://x.com/EUROYoungForum/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
