--- a/_config.yml
+++ b/_config.yml
@@ -121,13 +121,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto: euroyoung@euro-online.org"
+       #url: "mailto: euroyoung@euro-online.org"
     - label: "Website"
       icon: "fas fa-fw fa-link"
        #url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-  #     url: "https://x.com/EUROYoungForum/"
+       url: "https://x.com/EUROYoungForum/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
