--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ author:
   location         : "Europe"
   email            : "euroyoung@euro-online.org"
   twitter          : "EUROYoungForum"
-  github           : "YasmineBeck"
+  github           : "EUROYoungForum"
   #linkedin         : "yasmine-beck-310659163"
 
   
