--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "aqua"  # "default" "air", "aqua", "contrast", "dark"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "EURO Young"
+title                    : "EUROYoung"
 title_separator          : "-"
-subtitle                 : EURO YOUNG # site tagline that appears below site title in masthead
+subtitle                 : FORUM # site tagline that appears below site title in masthead
 name                     : "EURO YOUNG"
 description              : "This is the site made for showing activities and opportunities for early career researchers in operations research."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
