--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
   email            : "euroyoung@euro-online.org"
   twitter          : "EUROYoungForum"
   github           : "EUROYoungForum"
-  #linkedin         : "yasmine-beck-310659163"
+  #linkedin         : ""
 
   
   links:
