--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "EUROYoung"
 title_separator          : "-"
-subtitle                 : FORUM # site tagline that appears below site title in masthead
+subtitle                 : FORUM_ # site tagline that appears below site title in masthead
 name                     : "EURO YOUNG"
 description              : "This is the site made for showing activities and opportunities for early career researchers in operations research."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
