--- a/_config.yml
+++ b/_config.yml
@@ -99,10 +99,13 @@ facebook:
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
+
 social:
-  type                   : # Person or Organization (defaults to Person)
+  type                   : Organization # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links: - "https://x.com/EUROYoungForum/"
+  
+  # An array of links to social media profiles
 
 # Analytics
 analytics:
