--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,8 @@ og_image                 : # Open Graph/Twitter default site image
 social:
   type                   : Organization # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: - "https://x.com/EUROYoungForum/"
+  links: 
+  - "https://x.com/EUROYoungForum"
   
   # An array of links to social media profiles
 
