--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-   #   url: "https://x.com/EUROYoungForum/"
+      url: "https://x.com/EUROYoungForum"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
