--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -27,11 +27,13 @@ en: &DEFAULT_EN
   comments_title             : "Comments"
   more_label                 : "Learn more"
   related_label              : "You may also enjoy"
-  follow_label               : "Follow Us in:"
-  feed_label                 : # "Feed"
+  follow_label               : "Follow Us:"
+  feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Website"
   email_label                : "Email"
+  google_scholar             : "Google Scholar"
+  orcid                      : "ORCID"
   recent_posts               : "Recent posts"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "Your email address will not be published. Required fields are marked"
@@ -89,6 +91,8 @@ es: &DEFAULT_ES
   follow_label               : "Seguir:"
   feed_label                 : "Feed"
   powered_by                 : "Funciona con"
+  google_scholar             : "Google Scholar"
+  orcid                      : "ORCID"
   website_label              : "Sitio web"
   email_label                : "Correo electrónico"
   recent_posts               : "Entradas recientes"
