--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -34,7 +34,7 @@ en: &DEFAULT_EN
   email_label                : "Email"
   google_scholar             : "Google Scholar"
   orcid                      : "ORCID"
-  recent_posts               : "Recent posts"
+  recent_posts               : "NEWS!"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "Your email address will not be published. Required fields are marked"
   comment_form_comment_label : "Comment"
