--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,16 @@
 main:
   - title: "Home"
     url: /
-  - title: "Publications"
-    url: /publications/
-  - title: "Talks"
-    url: /talks/
-  - title: "Teaching"
-    url: /teaching/
+   - title: "Workshop"
+    url: /workshop/   
+       - title: "Past Workshops"
+    url: /pastworkshops/ 
+  #- title: "Publications"
+   # url: /publications/
+  #- title: "Talks"
+   # url: /talks/
+  #- title: "Teaching"
+  #  url: /teaching/
   - title: "Board"
     url: /board/
   - title: "Opportunities"
