--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Home"
     url: /
-  # - title: "Workshop"
-  #  url: /workshop/   
+  - title: "Workshops"
+    url: /workshops/ 
   - title: "Past Workshops"
     url: /pastworkshops/ 
   #- title: "Publications"
