--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /
   - title: "Workshop"
     url: /workshop/ 
-  - title: "Past Workshops"
+  - title: "Past Events"
     url: /pastworkshops/ 
   #- title: "Publications"
    # url: /publications/
