--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ analytics:
 author:
   name             : "EURO Young"
   avatar           : "/assets/images/EURO.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "euroyoung@euro-online.org \ The place for young researchers"
+  bio              : "euroyoung@euro-online.org | The place for young researchers"
   location         : #"Europe"
   email            : "euroyoung@euro-online.org"
   twitter          : "EUROYoungForum"
