--- a/_config.yml
+++ b/_config.yml
@@ -118,9 +118,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "EURO Young"
+  name             : "euroyoung@euro-online.org"
   avatar           : "/assets/images/EURO.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "euroyoung@euro-online.org | The place for young researchers"
+  bio              : "The place for young researchers"
   location         : #"Europe"
   email            : "euroyoung@euro-online.org"
   twitter          : "EUROYoungForum"
