--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "aqua"  # "default" "air", "aqua", "contrast", "dark"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "EUROYoung"
+title                    : "EUROYoung_"
 title_separator          : "-"
 subtitle                 : FORUM # site tagline that appears below site title in masthead
 name                     : "EURO YOUNG"
