--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Home"
     url: /
   - title: "Naples 2025"
-    url: /napoli/ 
+    url: /naples2025/ 
   #- title: "Workshop"
   #  url: /workshop/ 
   - title: "Past Events"
