--- a/_config.yml
+++ b/_config.yml
@@ -226,8 +226,12 @@ incremental: false
 kramdown:
   input: GFM
   hard_wrap: false
-  syntax_highlighter: rouge
-  parse_block_html: true   # <- important
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
 
 # Sass/SCSS
