--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,4 +19,4 @@ main:
   - title: "Opportunities"
     url: /opportunities/
     - title: "Resources"
-    url: /resources/
+    url: /resourcesfiles/
